--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
 body {
-    background-color:blue;
+    background-color:chartreuse;
+}
+
+nav {
+    text-transform: Uppercase;
+    font-family: "PT Sans Narrow";
+}
+
+.nav-link:hover {
+    opacity: 1;
+    background-color: #eee !important;
+    
+}
+
+header {
+    /*Sizing*/
+    height: 600px;
+    width: 100%;
+    background-image: url("header.jpg");
+    background-size: cover;
 }
